[project]
name = "lerobot-video-encoding-experiment"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "lerobot",
    "mpmath<1.3.0",
    "ruff>=0.12.8",
]

[tool.uv.sources]
lerobot = { git = "https://github.com/HiroIshida/lerobot.git", rev = "enable_to_change_codec" }
